[package]
name = "pubsub-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
cloud-pubsub = "0.8.0"
envy = "0.4"
google-cloud-googleapis = {version = "0.5.1", features = ["pubsub"]}
google-cloud-pubsub = "0.5.1"
serde = {version = "1.0.144", features = ["std", "derive"]}
tokio = {version = "1.21.0", features = ["full"]}
